<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Quiz App"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textAlignment="center"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profil"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:strokeWidth="5dp"
                    android:padding="5dp"
                    android:scaleType="center"
                    android:src="@drawable/baseline_photo_camera_24"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/layoutInputUsername"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="25dp"
                    android:elevation="0dp">
                    <EditText
                        android:id="@+id/inputUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:background="@color/white"
                        android:hint="@string/masukkan_nama"
                        android:textColorHint="#757575"
                        android:textAlignment="center"/>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:id="@+id/layoutScore"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="16sp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/bestScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/best_score"
                            android:paddingEnd="2sp"/>
                        <TextView
                            android:id="@+id/textScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"/>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnApply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:visibility="visible"
                    app:cornerRadius="25dp" />
                <Button
                    android:visibility="gone"
                    android:id="@+id/btnPlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/play"
                    app:cornerRadius="25dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>