<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KuisActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_margin="20dp">
<!--        Atas -->
        <LinearLayout
            android:id="@+id/cardPertanyaanAtas"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_app"
                android:layout_marginTop="72dp"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/nomor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_1_of_5"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cardHasilAtas"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_over"
                android:layout_marginTop="72dp"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>
<!--        Bawah -->
        <LinearLayout
            android:id="@+id/cardPertanyaanBawah"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3">
            <androidx.cardview.widget.CardView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="20dp">
                <TextView
                    android:id="@+id/pertanyaan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:textSize="16sp"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardOpsi1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="20dp">
                <TextView
                    android:id="@+id/opsi1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="16sp"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardOpsi2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="20dp">
                <TextView
                    android:id="@+id/opsi2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="16sp"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardOpsi3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="20dp">
                <TextView
                    android:id="@+id/opsi3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="16sp"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardOpsi4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="20dp">
                <TextView
                    android:id="@+id/opsi4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="16sp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cardHasilBawah"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3">
            <androidx.cardview.widget.CardView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="Your Score"
                        android:gravity="center"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="90"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/bestScoreText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="New Best Score"
                        android:gravity="center"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/bestScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="90"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                    <Button
                        android:id="@+id/btnHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/back_to_home"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        app:cornerRadius="25dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>